--- a/page21.html
+++ b/page21.html
@@ -11,7 +11,7 @@ body {
 	max-width:70px
 	padding: 0px;
 	display: flex;
-	margin:0px 0px 0px 250px;
+	/*margin:0px 0px 0px 250px;*/
 	}
 
 /* Hide the images by default */
