--- a/page21.html
+++ b/page21.html
@@ -8,7 +8,7 @@ body {
 
 /* Position the image container (needed to position the left and right arrows) */
 .container{
-	max-width:70px
+	max-width:100%;
 	padding: 0px;
 	display: flex;
 	/*margin:0px 0px 0px 250px;*/
