--- a/page21.html
+++ b/page21.html
@@ -107,6 +107,20 @@ body {
 }
 
 .close:hover {background: #bbb;}
+	
+
+@media screen and (max-width:1200px)
+{
+	
+.device{left:20%;top:-36px;}
+	
+.container
+{margin-right:10%;}
+
+.right-column
+{width:55%;}
+
+}
 
 </style>
 <body>
