--- a/page21.html
+++ b/page21.html
@@ -121,6 +121,11 @@ body {
 {width:55%;}
 
 }
+	
+#hp  {
+float: left;    
+ margin: 0 15px 0 0;
+}
 
 </style>
 <body>
@@ -129,7 +134,7 @@ body {
 <h2 style="text-align:center">Slideshow Gallery<span class="close"><button onclick="history.back()" style="font-size:10px">&times;</button></span></h2><hr>
 
 <div class="container">
- <div class="left-column">
+ <div class="left-column" id="hp">
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
     <img src="1.jpeg" style="width:100%">
